==> wanglusong/STM32_F1_HAL_LIB/HARDWARE/TIMER/timer.c <==
#include "timer.h"
#include "lvgl.h"

#if TIM_FUNC
#include "string.h"
#include "uartall.h"

TIM_CONFIG tim_config_t;

TIM_HandleTypeDef TIM3_Handler;      //定时器句柄 
TIM_HandleTypeDef TIM4_Handler;      //定时器句柄 
TIM_HandleTypeDef TIM5_Handler;      //定时器句柄 

//通用定时器3中断初始化
//arr：自动重装值。
//psc：时钟预分频数
//定时器溢出时间计算方法:Tout=((arr+1)*(psc+1))/Ft us.
//Ft=定时器工作频率,单位:Mhz
//这里使用的是定时器3!
void TIM3_Init(u16 arr,u16 psc)
{  
    TIM3_Handler.Instance=TIM3;                          //通用定时器3
    TIM3_Handler.Init.Prescaler=psc;                     //分频系数
    TIM3_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;    //向上计数器
    TIM3_Handler.Init.Period=arr;                        //自动装载值
    TIM3_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;//时钟分频因子
    HAL_TIM_Base_Init(&TIM3_Handler);
    
    HAL_TIM_Base_Stop_IT(&TIM3_Handler); //使能定时器3和定时器3更新中断：TIM_IT_UPDATE  

		memset(&tim_config_t, 0 ,sizeof(TIM_CONFIG));
}

void TIM4_Init(u16 arr,u16 psc)
{  
    TIM4_Handler.Instance=TIM4;                          //通用定时器4
    TIM4_Handler.Init.Prescaler=psc;                     //分频系数
    TIM4_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;    //向上计数器
    TIM4_Handler.Init.Period=arr;                        //自动装载值
    TIM4_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;//时钟分频因子
    HAL_TIM_Base_Init(&TIM4_Handler);
    
    HAL_TIM_Base_Stop_IT(&TIM4_Handler); //使能定时器4和定时器4更新中断：TIM_IT_UPDATE   
}

void TIM5_Init(u16 arr,u16 psc)
{  
    TIM5_Handler.Instance=TIM5;                          //通用定时器5
    TIM5_Handler.Init.Prescaler=psc;                     //分频系数
    TIM5_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;    //向上计数器
    TIM5_Handler.Init.Period=arr;                        //自动装载值
    TIM5_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;//时钟分频因子
    HAL_TIM_Base_Init(&TIM5_Handler);
    
    HAL_TIM_Base_Stop_IT(&TIM5_Handler); //使能定时器5和定时器5更新中断：TIM_IT_UPDATE   
}

/*开关定时器*/
void TIM_ON_OFF_IT(TIM_HandleTypeDef *htim, bool status)
{
		if(htim->Instance == TIM3)
		{
			if(status)
				HAL_TIM_Base_Start_IT(&TIM3_Handler);
			else
				HAL_TIM_Base_Stop_IT(&TIM3_Handler);
		}
		else if(htim->Instance == TIM4)
		{
			if(status)
				HAL_TIM_Base_Start_IT(&TIM4_Handler);
			else
				HAL_TIM_Base_Stop_IT(&TIM4_Handler);
		}		
		else if(htim->Instance == TIM5)
		{
			if(status)
				HAL_TIM_Base_Start_IT(&TIM5_Handler);
			else
				HAL_TIM_Base_Stop_IT(&TIM5_Handler);
		}				
}
/*返回定时器状态*/
HAL_TIM_StateTypeDef Get_TIM_State(TIM_HandleTypeDef *htim)
{
	return HAL_TIM_Base_GetState(htim);
}

//定时器底册驱动，开启时钟，设置中断优先级
//此函数会被HAL_TIM_Base_Init()函数调用
void HAL_TIM_Base_MspInit(TIM_HandleTypeDef *htim)
{
    if(htim->Instance==TIM3)
	{
		__HAL_RCC_TIM3_CLK_ENABLE();            //使能TIM3时钟
		HAL_NVIC_SetPriority(TIM3_IRQn,1,3);    //设置中断优先级，抢占优先级1，子优先级3
		HAL_NVIC_EnableIRQ(TIM3_IRQn);          //开启ITM3中断   
	}
	   else if(htim->Instance==TIM4)
	{
		__HAL_RCC_TIM4_CLK_ENABLE();            //使能TIM4时钟
		HAL_NVIC_SetPriority(TIM4_IRQn,1,4);    //设置中断优先级，抢占优先级1，子优先级4
		HAL_NVIC_EnableIRQ(TIM4_IRQn);          //开启ITM3中断   
	}
	   else if(htim->Instance==TIM5)
	{
		__HAL_RCC_TIM5_CLK_ENABLE();            //使能TIM5时钟
		HAL_NVIC_SetPriority(TIM5_IRQn,1,5);    //设置中断优先级，抢占优先级1，子优先级5
		HAL_NVIC_EnableIRQ(TIM5_IRQn);          //开启ITM3中断   
	}	
}

//定时器3中断服务函数
void TIM3_IRQHandler(void)
{
    HAL_TIM_IRQHandler(&TIM3_Handler);
}

//定时器4中断服务函数
void TIM4_IRQHandler(void)
{
    HAL_TIM_IRQHandler(&TIM4_Handler);
}

//定时器5中断服务函数
void TIM5_IRQHandler(void)
{
    HAL_TIM_IRQHandler(&TIM5_Handler);
}

//回调函数，定时器中断服务函数调用
void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
{
    if(htim==(&TIM3_Handler))
    {
       lv_tick_inc(1);//lvgl的1ms心跳
    }else if(htim==(&TIM4_Handler))
    {
       if(tim_config_t.status == true)
			 {
					tim_config_t.tim_count ++;
					if(tim_config_t.tim_count > 2)
					{
						tim_config_t.tim_count = 0;
						tim_config_t.status = false;
						TIM_ON_OFF_IT(&TIM4_Handler, false);
						uart_config_t.uart_state = true;/*接收完成*/
					}
			 }
    }else if(htim==(&TIM5_Handler))
    {
			if(tim_config_t.TIM5_Status == true)
			{
				tim_config_t.tim_count++;
				if(tim_config_t.tim_count >= 10)/*10s*/
				{
					tim_config_t.TIM5_Status = false;
					TIM_ON_OFF_IT(&TIM5_Handler, false);
					main_param_t.runstatus = false;/*待机状态*/
				}
			}
    }
}

#endif
